--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
         <!-- make sure you either set following properties here or in your settings xml (preferred) -->
 
         <!--
-        <graalvm.home>/path/to/graalvm</graalvm.home> all platforms
-        <jdk.home>/path/to/jdk</jdk.home> linux, windows
-        <osx.jdk.home.aarch64>/path/to/aarch64/jdk</osx.jdk.home.aarch64> see also build scripts
-        <osx.jdk.home.x64>/path/to/x64/jdk</osx.jdk.home.x64>
+        <jdk.home>/path/to/jdk</jdk.home> (mac, linux, windows)
+        <graalvm.home>/path/to/graalvm</graalvm.home> (mac, linux, windows)
+        <osx.jdk.home.aarch64>/path/to/aarch64/jdk</osx.jdk.home.aarch64> (mac)
+        <osx.jdk.home.x64>/path/to/x64/jdk</osx.jdk.home.x64> (mac)
         -->
 
         <revision>23.1.0</revision>
@@ -49,7 +49,9 @@
             </activation>
             <properties>
                 <!-- check https://github.com/gluonhq/graal/releases/ for latest gluon graal release -->
+                <!-- graalvm builds disabled until https://github.com/rladstaetter/LogoRRR/issues/91
                 <graalvm.home>C:\Program Files\Java\graalvm-svm-java11-windows-gluon-22.1.0.1-Final</graalvm.home>
+                -->
                 <!-- see also dist/dist-win/pom.xml! -->
                 <advanced.installer.compiler>C:\Program Files (x86)\Caphyon\Advanced Installer 19.8.1\bin\x86\AdvancedInstaller.com</advanced.installer.compiler>
             </properties>
@@ -93,12 +95,14 @@
                                                 a signed pkg file.
                                             </message>
                                         </requireProperty>
+                                        <!--
                                         <requireProperty>
                                             <property>graalvm.home</property>
                                             <message>You have to set 'graalvm.home' and point to a correct graalvm
                                                 installation.
                                             </message>
                                         </requireProperty>
+                                        -->
                                     </rules>
                                     <fail>true</fail>
                                 </configuration>
@@ -475,24 +479,25 @@
                             <phase>initialize</phase>
                             <configuration>
                                 <rules>
+                                    <!-- disable graalvm builds until https://github.com/rladstaetter/LogoRRR/issues/91 is resolved
                                     <requireProperty>
                                         <property>graalvm.home</property>
                                         <message>You have to set 'graalvm.home' and point to a correct graalvm
                                             installation.
                                         </message>
                                     </requireProperty>
+                                    <requireFilesExist>
+                                        <files>
+                                            <file>${graalvm.home}/GRAALVM-README.md</file>
+                                        </files>
+                                    </requireFilesExist>
+                                    -->
                                     <requireProperty>
                                         <property>jdk.home</property>
                                         <message>You have to set 'jdk.home' and point to a correct jdk
                                             installation.
                                         </message>
                                     </requireProperty>
-                                    <requireFilesExist>
-                                        <files>
-                                            <!-- simple check if graalvm home is correctly defined -->
-                                            <file>${graalvm.home}/GRAALVM-README.md</file>
-                                        </files>
-                                    </requireFilesExist>
                                     <requireMavenVersion>
                                         <version>[3.6.2,)</version>
                                         <message>Check for Maven version &gt;=3.6.2 failed. Upgrade your Maven
