--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,11 @@
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.10</scala.version>
 
-        <openjfx.version>19</openjfx.version>
+        <openjfx.version>20-ea+11</openjfx.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <ikonli.version>12.3.1</ikonli.version>
         <!-- check https://github.com/gluonhq/graal/releases/ for latest gluon graal release -->
-        <gluonfx.plugin.version>1.0.15</gluonfx.plugin.version>
+        <gluonfx.plugin.version>1.0.16</gluonfx.plugin.version>
 
         <!-- no need to change these -->
         <changelist>-SNAPSHOT</changelist>
@@ -223,7 +223,7 @@
             <dependency>
                 <groupId>io.github.mkpaz</groupId>
                 <artifactId>atlantafx-base</artifactId>
-                <version>1.0.0</version>
+                <version>1.1.0</version>
             </dependency>
             <dependency>
                 <groupId>org.kordamp.ikonli</groupId>
@@ -238,12 +238,12 @@
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.8.0</version>
+                <version>2.11.0</version>
             </dependency>
             <dependency>
                 <groupId>com.github.pureconfig</groupId>
                 <artifactId>pureconfig_${scala.major.version}</artifactId>
-                <version>0.17.1</version>
+                <version>0.17.2</version>
             </dependency>
             <dependency>
                 <groupId>org.scalatest</groupId>
