--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
         <jdk.jpackage.binary>${jdk.home}/bin/jpackage</jdk.jpackage.binary>
     </properties>
 
+    <scm>
+        <connection>scm:git:https://github.com/rladstaetter/LogoRRR.git</connection>
+        <developerConnection>scm:git:https://github.com/rladstaetter/LogoRRR.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <profiles>
         <profile>
             <id>OS.windows</id>
@@ -234,6 +240,22 @@
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>buildnumber-maven-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <executions>
+                        <execution>
+                            <phase>generate-resources</phase>
+                            <goals>
+                                <goal>create-metadata</goal>
+                            </goals>
+                            <configuration>
+                                <addOutputDirectoryToResources>true</addOutputDirectoryToResources>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
                 <!-- to make intellij idea happy -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
