#166: adds screenshots for 24.1.0

--- a/docs/src/main/resources/screenshotter-1440-900.conf
+++ b/docs/src/main/resources/screenshotter-1440-900.conf
@@ -3,27 +3,32 @@
         "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log" : {
             "auto-scroll" : false,
             "block-settings" : {
-                "width" : 22
+                "size" : 22
             },
             "divider-position" : 0.5,
             "filters" : [
                 {
+                    "active" : true,
                     "color" : "0x00ff00ff",
                     "pattern" : "LogoRRR"
                 },
                 {
+                    "active" : true,
                     "color" : "0xe6b34dff",
                     "pattern" : "WARN"
                 },
                 {
+                    "active" : true,
                     "color" : "0x82cabbff",
                     "pattern" : "create mode"
                 },
                 {
+                    "active" : true,
                     "color" : "0xff0000ff",
                     "pattern" : "Exception"
                 },
                 {
+                    "active" : true,
                     "color" : "0xff6666ff",
                     "pattern" : "at "
                 }
@@ -31,14 +36,13 @@
             "first-opened" : 1692306222365,
             "font-size" : 10,
             "path-as-string" : "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log",
-            "selected-index" : 0
+            "selected-line-number" : 0
         }
     },
-    "some-active" : "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log",
     "stage-settings" : {
-        "height" : 310,
-        "width" : 608,
-        "x" : 100.0,
-        "y" : 100.0
+        "height" : 900,
+        "width" : 1440,
+        "x" : 0.0,
+        "y" : 0.0
     }
 }
