--- a/docs/src/main/resources/screenshotter-2880-1800.conf
+++ b/docs/src/main/resources/screenshotter-2880-1800.conf
@@ -3,23 +3,27 @@
         "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log" : {
             "auto-scroll" : false,
             "block-settings" : {
-                "width" : 18
+                "size" : 18
             },
             "divider-position" : 0.30346385542168675,
             "filters" : [
                 {
+                    "active" : true,
                     "color" : "0x00ff00ff",
                     "pattern" : "LogoRRR"
                 },
                 {
+                    "active" : true,
                     "color" : "0xe6b34dff",
                     "pattern" : "WARN"
                 },
                 {
+                    "active" : true,
                     "color" : "0x82cabbff",
                     "pattern" : "create mode"
                 },
                 {
+                    "active" : true,
                     "color" : "0xff0000ff",
                     "pattern" : "Exception"
                 }
@@ -27,14 +31,13 @@
             "first-opened" : 1692306222365,
             "font-size" : 6,
             "path-as-string" : "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log",
-            "selected-index" : 0
+            "selected-line-number" : 0
         }
     },
-    "some-active" : "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log",
     "stage-settings" : {
-        "height" : 760,
-        "width" : 1328,
-        "x" : 296.0,
-        "y" : 60.0
+        "height" : 1800,
+        "width" : 2880,
+        "x" : 0.0,
+        "y" : 0.0
     }
 }
