--- a/docs/src/main/resources/screenshotter-1280-800.conf
+++ b/docs/src/main/resources/screenshotter-1280-800.conf
@@ -1,11 +1,12 @@
 {
-    "log-file-settings" : {
+    "file-settings" : {
         "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log" : {
             "auto-scroll" : false,
             "block-settings" : {
                 "size" : 6
             },
             "divider-position" : 0.5,
+            "file-id" : "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log",
             "filters" : [
                 {
                     "active" : true,
@@ -30,14 +31,13 @@
             ],
             "first-opened" : 1692306222365,
             "font-size" : 4,
-            "path-as-string" : "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log",
             "selected-line-number" : 0
         }
     },
     "stage-settings" : {
         "height" : 800,
         "width" : 1280,
-        "x" : 0.0,
-        "y" : 0.0
+        "x" : 1920.0,
+        "y" : 133.0
     }
 }
