#208: adds basic TestFX support and an example test

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -51,6 +51,10 @@
             <artifactId>javafx-controls</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_${scala.major.version}</artifactId>
         </dependency>
